# anchore_engine/services/catalog/api/controllers/default_controller.py
@@ -1,6 +1,7 @@
 import connexion
 
 import anchore_engine.apis
+import anchore_engine.services.catalog.importer
 from anchore_engine import db
 import anchore_engine.services.catalog.catalog_impl
 import anchore_engine.common
@@ -15,6 +16,13 @@ from anchore_engine.db import AccountTypes
 from anchore_engine.apis.context import ApiRequestContextProxy
 from anchore_engine.services.catalog import archiver
 from anchore_engine.subsys.metrics import flask_metrics
+from anchore_engine.common.schemas import ImportManifest
+from anchore_engine.apis.exceptions import (
+    AnchoreApiError,
+    BadRequest,
+    InternalError,
+    ConflictingRequest,
+)
 
 authorizer = get_authorizer()
 
@@ -137,6 +145,13 @@ def add_image(
                 "allow_dockerfile_update": allow_dockerfile_update,
             },
         )
+
+        if image_metadata.get("import_operation_id") and from_archive:
+            raise BadRequest(
+                'Cannot specify both "from_archive=True" query parameter and include an import manifest in the payload',
+                detail={},
+            )
+
         if from_archive:
             task = archiver.RestoreArchivedImageTask(
                 account=ApiRequestContextProxy.namespace(), image_digest=digest
@@ -153,8 +168,46 @@ def add_image(
                 ) = anchore_engine.services.catalog.catalog_impl.image_imageDigest(
                     session, request_inputs, digest
                 )
-        else:
+                (
+                    return_object,
+                    httpcode,
+                ) = anchore_engine.services.catalog.catalog_impl.image_imageDigest(
+                    session, request_inputs, digest
+                )
 
+        elif image_metadata.get("import_operation_id"):
+            operation_id = image_metadata.get("import_operation_id")
+            try:
+                import_manifest = ImportManifest.from_json(
+                    image_metadata["import_manifest"]
+                )
+            except AnchoreApiError:
+                raise
+            except Exception as err:
+                logger.debug_exception("Error unmarshalling manifest")
+                # If we hit this, it means the swagger spec doesn't match the marshmallow scheme
+                raise BadRequest(
+                    message="invalid import manifest", detail={"error": str(err)}
+                )
+
+            # If annotations in both the wrapper and import manifest, then merge them
+            if image_metadata.get("annotations"):
+                import_manifest.annotations.update(image_metadata.get("annotations"))
+
+            dockerfile = image_metadata.get("dockerfile")
+
+            with db.session_scope() as session:
+                # allow_dockerfile_update is a poor proxy for the 'force' option
+                return_object = anchore_engine.services.catalog.importer.import_image(
+                    session,
+                    account=ApiRequestContextProxy.namespace(),
+                    operation_id=operation_id,
+                    import_manifest=import_manifest,
+                    dockerfile_content=dockerfile,
+                    force=allow_dockerfile_update,
+                )
+                httpcode = 200
+        else:
             with db.session_scope() as session:
                 (
                     return_object,
@@ -162,6 +215,15 @@ def add_image(
                 ) = anchore_engine.services.catalog.catalog_impl.image(
                     session, request_inputs, bodycontent=image_metadata
                 )
+                (
+                    return_object,
+                    httpcode,
+                ) = anchore_engine.services.catalog.catalog_impl.image(
+                    session, request_inputs, bodycontent=image_metadata
+                )
+
+    except AnchoreApiError:
+        raise
     except ImageConflict as img_err:
         httpcode = 409
         return_object = str(img_err)
