# anchore_engine/services/catalog/swagger/swagger.yaml
@@ -187,7 +187,7 @@ paths:
     post:
       tags:
       - "catalog"
-      summary: "Get image records from DB"
+      summary: "Add image records to catalog db"
       description: ""
       operationId: "add_image"
       parameters:
@@ -617,6 +617,7 @@ paths:
       - name: 'archiveid'
         in: path
         type: string
+        format: path
         description: "archiveid"
         required: true
       produces:
@@ -1692,32 +1693,55 @@ paths:
             $ref: "#/definitions/ImageImportContentResponse"
         500:
           description: "Internal Error"
-  /imports/images/{operation_id}/finalize:
+  /imports/images/{operation_id}/dockerfile:
     post:
       x-swagger-router-controller: anchore_engine.services.catalog.api.controllers.imports
-      operationId: finalize_import
+      operationId: import_image_dockerfile
       x-anchore-authz-action: importImage
-      summary: "Finalize the import, indicating all data is present and the system can load the image"
-      description: "Ends the import process upload phase and begins the import async process to load the image"
+      summary: "Begin the import of an image analyzed by Syft into the system"
+      description: "Starts the import process"
       produces:
+        - "text/plain; utf-8"
+      consumes:
         - "application/json"
       parameters:
         - name: operation_id
           in: path
           type: string
           required: true
-        - name: manifest
-          in: body
-          schema:
-            $ref: "#/definitions/ImageImportManifest"
-          required: true
       responses:
         200:
           description: "success"
           schema:
-            $ref: "#/definitions/FinalizeImageImportResponse"
+            $ref: "#/definitions/ImageImportContentResponse"
         500:
           description: "Internal Error"
+#  /imports/images/{operation_id}/finalize:
+#    post:
+#      x-swagger-router-controller: anchore_engine.services.catalog.api.controllers.imports
+#      operationId: finalize_import
+#      x-anchore-authz-action: importImage
+#      summary: "Finalize the import, indicating all data is present and the system can load the image"
+#      description: "Ends the import process upload phase and begins the import async process to load the image"
+#      produces:
+#        - "application/json"
+#      parameters:
+#        - name: operation_id
+#          in: path
+#          type: string
+#          required: true
+#        - name: manifest
+#          in: body
+#          schema:
+#            $ref: "#/definitions/ImageImportManifest"
+#          required: true
+#      responses:
+#        200:
+#          description: "success"
+#          schema:
+#            $ref: "#/definitions/FinalizeImageImportResponse"
+#        500:
+#          description: "Internal Error"
 definitions:
   ImageAddMetadata:
     description: Additional data to add to an image record when an image is ingressed, such as dockerfile and annotations
@@ -1729,6 +1753,11 @@ definitions:
       annotations:
         type: object
         description: Key-Value metadata to add to the record
+      import_operation_id:
+        type: string
+        description: Import ID to use to pull content if doing an import instead of analysis
+      import_manifest:
+        $ref: "#/definitions/ImageImportManifest"
   ApiErrorResponse:
     description: "Generic HTTP API error response"
     type: object
@@ -2032,8 +2061,6 @@ definitions:
   ImageImportManifest:
     type: object
     properties:
-      annotations:
-        $ref: "#/definitions/Annotations"
       contents:
         $ref: "#/definitions/ImportContentList"
       tags:
@@ -2042,21 +2069,29 @@ definitions:
           type: string
           description: Full docker reference tags
           example: "docker.io/library/nginx:latest"
+      digest:
+        type: string
+      parent_digest:
+        type: string
+        description: The digest of the images's manifest-list parent if it was accessed from a multi-arch tag where the tag pointed to a manifest-list. This allows preservation of that relationship in the data
+      local_image_id:
+        type: string
+        description: An "imageId" as used by Docker if available
       metadata:
         $ref: "#/definitions/ImageImportManifestMetadata"
   ImageImportManifestMetadata:
     type: object
     properties:
-      digest:
-        type: string
-      local_image_id:
-        type: string
       layers:
         type: array
         items:
           $ref: "#/definitions/ImageImportLayerMetadata"
       platform:
         $ref: "#/definitions/ImageImportPlatform"
+      created_at:
+        type: string
+        format: date-time
+        description: The date of the image build/tagging to allow insertion into the tag history based on another timestamp than the record creation in Anchore. Use this with caution.
   ImageImportPlatform:
     type: object
     description: An image platform is a combination of an OS and an architecture
